[gd_scene load_steps=2 format=3 uid="uid://jw72sm4n7uia"]

[ext_resource type="Script" uid="uid://bf73xy2svf657" path="res://scenes/game_over_menu/game_over_menu.gd" id="1_p0tvy"]

[node name="GameOverMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p0tvy")

[node name="DarkTransparentColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.521569)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -60.0
offset_right = 90.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="VerticalBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="GameOverHeadline" type="Label" parent="MarginContainer/VerticalBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Game over"
horizontal_alignment = 1

[node name="QuitButton" type="Button" parent="MarginContainer/VerticalBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Quit"

[connection signal="pressed" from="MarginContainer/VerticalBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
